# api-capitals

./: README.md  main.py  pyproject.toml
endpoints/: cities.py  countries.py
