[tool.poetry]
name = "capitals"
version = "0.1.0"
description = "The Capitals API project"
authors = ["Markus"]
license = "Creative Commons (CC)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
